# market_regime_bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DETAILED_ARCHITECTURE_AND_LIMITATIONS.txt  FULL_ARCHITECTURE_DUMP_FOR_CLAUDE.txt  LICENSE  Makefile  README.md  README_PRESENTATION.md  SECURITY.md  build_baseline.py  deploy_local_windows.ps1  deploy_rust.sh  docker-compose.yml  main.py  market_time.py  mlops_retrainer.py  requirements-dev.txt  requirements.txt  run_bot.py  run_crypto.py  run_hft_websocket.py  run_logs.txt  run_phase10.py  run_phase11.py  run_phase12.py  run_phase7.py  run_phase8.py  run_phase9.py  verify_flow.py
ai/: agent_manager.py  dark_pool_radar.py  execution_agent.py  macro_agent.py  news_agent.py  portfolio_agent.py  research_agent.py  risk_agent.py  risk_shield.py  sentiment_engine.py  stat_arb.py  strategy_agent.py  swarm_debater.py
alerts/: __init__.py  alert_manager.py  discord_alert.py  email_alert.py  telegram_alert.py
alternative_data/: earnings_calendar.py  macro_data.py  news_processor.py  sentiment_analyzer.py
analytics/: __init__.py  drawdown.py  equity_curve.py  performance.py  risk_metrics.py  statistics.py  trade_analysis.py
api/: __init__.py  auth.py  main.py  routes.py  websocket.py
automation/: backup.py  retrainer.py  scheduler.py  updater.py
backtesting/: __init__.py  backtest_engine.py  commission_model.py  optimizer.py  parameter_search.py  simulator.py  slippage_model.py  trade_simulator.py  walk_forward.py
rust_engine/: Cargo.toml
rust_engine/src/: execution.rs  main.rs  orderbook.rs
(+197 files in other folders)
