[package]
name = "hft_rust_engine"
version = "0.1.0"
edition = "2021"
description = "Ultra-low latency execution Hands for AI Python Brain"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
zeromq = "0.3" # Native Rust ZeroMQ implementation (avoiding libzmq C-bindings for portability)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
